crates/biome_js_type_info/tests/snapshots/infer_type_of_function_with_destructured_arguments.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function destruct(
	{ a, b }: { a: number; b: string },
	[first, ...rest]: Array<boolean>,
) {}

```

## Result

```
sync Function "destruct" {
  accepts: {
    params: [
      required (bindings: a: Local TypeId(1),
      b: Local TypeId(2)): Local TypeId(0)
      required (bindings: first: Local TypeId(5),
      rest: Local TypeId(6)): Local TypeId(4)
    ]
    type_args: []
  }
  returns: Local TypeId(7)
}
```

## Registered types

```
Module TypeId(0) => Object {
  prototype: No prototype
  members: ["a": number, "b": string]
}

Module TypeId(1) => Local TypeId(0).a

Module TypeId(2) => Local TypeId(0).b

Module TypeId(3) => boolean

Module TypeId(4) => instanceof unresolved reference "Array"<Local TypeId(3)> (scope ID: 0)

Module TypeId(5) => Local TypeId(4)[0]

Module TypeId(6) => [(1 others)...Local TypeId(4)]

Module TypeId(7) => void
```
