crates/biome_js_type_info/tests/snapshots/infer_type_of_literal.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const a = 123.45;

```

## Result

```
a => number: 123.45

```

## Registered types

```
Module TypeId(0) => number: 123.45
```
