crates/biome_js_type_info/tests/snapshots/infer_type_of_mapped_type_binding.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
let flags: { [K in keyof Source]?: boolean };

```

## Result

```
flags => instanceof Local TypeId(3)

```

## Registered types

```
Module TypeId(0) => K

Module TypeId(1) => instanceof unresolved reference "Source" (scope ID: 0)

Module TypeId(2) => boolean

Module TypeId(3) => MappedType {
    type_parameter: Resolved(
        Local TypeId(0),
    ),
    keys: Keyof(
        Resolved(
            Local TypeId(1),
        ),
    ),
    ty: Resolved(
        Local TypeId(2),
    ),
    readonly_modifier: None,
    optional_modifier: Some(
        Add,
    ),
}

Module TypeId(4) => instanceof Local TypeId(3)
```
